fix(*): add create for flashcard and category
